<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="fav_activity">Movie Catalogue Favorite</string>

    <string name="title_activity_detail_movie">Detail Movie</string>
    <!-- Strings used for fragments for navigation -->

    <string name="title_activity_detail_tv_show">Detail Tv Show</string>
    <string name="title2">Kilasan Singkat</string>
    <string name="share_text">ini bisa diisi dengan link ke movie atau download appsnya</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV SHOW</string>
    <string name="hours">Jam</string>
    <string name="_score">User Score : </string>
    <string name="favorite">Favorite</string>
    <string name="message_undo"> 1 item deleted </string>
    <string name="undo">Undo</string>

</resources>